--- a/package.json
+++ b/package.json
@@ -6,35 +6,32 @@
 		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
+		"deploy": "npx gh-pages -d build",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@skeletonlabs/skeleton": "2.10.2",
+		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/node": "20.14.11",
+		"autoprefixer": "10.4.19",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"gh-pages": "^6.1.1",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3",
-		"postcss": "8.4.39",
-		"autoprefixer": "10.4.19",
-		"tailwindcss": "3.4.6",
-		"@skeletonlabs/skeleton": "2.10.2",
-		"@skeletonlabs/tw-plugin": "0.4.0",
-		"vite-plugin-tailwind-purgecss": "0.3.3",
-		"@types/node": "20.14.11"
+		"vite-plugin-tailwind-purgecss": "0.3.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-adapter-github": "^1.0.0-next.0"
+	}
 }
